--- a/write.html
+++ b/write.html
@@ -1,22 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-
     <title>Hello, world!</title>
   </head>
   <body>
-    <!-- Optional JavaScript; choose one of the two! -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">TodoApp</a>
@@ -58,7 +53,21 @@
       </div>
     </nav>
 
-    <h4>홈입니다.</h4>
+    <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
+
+    <div class="container mt-3">
+      <form action="/add" method="POST">
+        <div class="form-group mb-3">
+          <label>할 일</label>
+          <input class="form-control" name="title" />
+        </div>
+        <div class="mb-3">
+          <label>Due date</label>
+          <input type="text" class="form-control" name="date" />
+        </div>
+        <button type="submit" class="btn btn-danger">Submit</button>
+      </form>
+    </div>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script
